# aviso-lagrangian

./: .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  SConfigure  SConstruct  bitbucket-pipelines.yml  build.sh  configure.py  conftest.py  convert_nc.py  docker.ini  env.yml  list.ini  map_of_fle.py  meta.yaml  pyproject.toml  requirements-dev.txt  sds.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
cmake/: FindNetCDF.cmake  FindUDUNITS2.cmake
conda/: ci.yml  environment.yml  meta.yaml
doc/: Makefile  make.bat
doc/cpp/: lagrangian.cfg
doc/source/: conf.py  contents.rst  index.rst  install.rst  python_api.rst  scripts.rst  wrapper.rst
doc/source/scripts/: map_of_fle.rst  mapping.rst  metric_to_angular.rst  path.rst
doc/source/wrapper/: date.rst  field.rst  integration.rst  map.rst  parameter.rst  reader.rst  units.rst
docs/source/: api.rst  conf.py  contents.rst  help_directive.py  index.rst  install.rst  scripts.rst
docs/source/_templates/autosummary/: class.rst
docs/source/api/: integration.rst  maps.rst  position.rst  units.rst  velocity.rst
docs/source/scripts/: map_of_fle.rst  metric_to_angular.rst  path.rst
examples/: ex_map_of_fle.py  ex_path.py  map_of_fle  mapping.py  metric_to_angular  path
include/: attribute.hpp  axis.hpp  cf.h  dimension.hpp  field.hpp  group.hpp  integration.hpp  julian_day.hpp  list.hpp  map.hpp  misc.hpp  netcdf.hpp  netcdf_reader.hpp  parameter.hpp  reader.h  reader.hpp  reader_factory.hpp  runge_kutta.hpp  scale_missing.hpp  time_serie.hpp  time_serie_field.hpp  trace.h  units.hpp  variable.hpp  vonkarman_field.hpp
src/core/: axis.cpp  datetime.cpp  datetime.hpp  field.cpp  integration.cpp  main.cpp  map.cpp  reader.cpp  unit.cpp
src/etc/: map_of_fle  map_of_fle.py  map_of_fsle  mapping  metric_to_angular  metric_to_angular.py  path  path.py
src/include/: attribute.hpp  axis.hpp  dimension.hpp  field.hpp  integration.hpp  julian_day.hpp  list.hpp  map.hpp  misc.hpp  netcdf.hpp  netcdf_reader.hpp  parameter.hpp  reader.hpp  reader_factory.hpp  runge_kutta.hpp  stencil.hpp  time_serie.hpp  time_serie_field.hpp  trace.h  units.hpp  variable.hpp  vonkarman_field.hpp
src/include/boost/date_time/: gregorian.pxd  posix_time.pxd
src/include/lagrangian/: axis.hpp  datetime.hpp  field.hpp  integration.hpp  list.hpp  map.hpp  misc.hpp  netcdf.hpp  parameter.hpp  reader.hpp  runge_kutta.hpp  stencil.hpp  time_serie.hpp  trace.hpp  units.hpp
src/include/lagrangian/field/: time_serie.hpp  vonkarman.hpp
src/include/lagrangian/netcdf/: attribute.hpp  cf.hpp  dimension.hpp  group.hpp  scale_missing.hpp  variable.hpp
src/include/lagrangian/reader/: factory.hpp  netcdf.hpp
src/lagrangian/: __init__.py  __init__.pyi  axis.pyi  field.pyi  sample_data_handler.py  test_data.py
src/lagrangian/console_scripts/: map_of_fle.py  metric_to_angular.py  path.py
src/lagrangian/core/: __init__.pyi  axis.pyi  field.pyi  reader.pyi  units.pyi
src/lib/: attribute.cpp  axis.cpp  cf.cpp  datetime.cpp  group.cpp  integration.cpp  julian_day.cpp  map.cpp  netcdf.cpp  netcdf_reader.cpp  parameter.cpp  scale_missing.cpp  time_serie.cpp  time_serie_field.cpp  trace.cpp  units.cpp  variable.cpp  vonkarman_field.cpp
src/lib/field/: time_serie.cpp  vonkarman.cpp
src/lib/netcdf/: attribute.cpp  cf.cpp  group.cpp  netcdf.cpp  scale_missing.cpp  variable.cpp
src/lib/reader/: netcdf.cpp
src/wrapper/: axis_wrapper.cpp  axis_wrapper.h  core.cpp  core.h  core.pyx  core_api.h  cpp_lagrangian.pxd  date_wrapper.cpp  date_wrapper.h  field.cpp  field.hpp  field_wrapper.cpp  field_wrapper.h  integration_wrapper.cpp  integration_wrapper.h  lagrangian.cpp  lagrangian.h  lagrangian.pxd  lagrangian.pyx  lagrangian_api.h  main.cpp  map_wrapper.cpp  map_wrapper.h  numpy.hpp  parameter_wrapper.cpp  parameter_wrapper.h  reader.cpp  reader.hpp  reader_wrapper.cpp  reader_wrapper.h  units_wrapper.cpp  units_wrapper.h
src/wrapper/boost/date_time/: gregorian.pxd  posix_time.pxd
test/: __init__.py  buoys.txt  map.ini  test_axis.py  test_datetime.py  test_field.py  test_integration.py  test_map.py  test_reader.py
tests/: __init__.py  buoys.txt  map.ini  path.ini  test_console_scripts.py  test_datetime.py  test_field.py  test_integration.py  test_map.py  test_reader.py
